[project]
name = "nonebot-demo"
version = "0.1.0"
description = "nonebot-demo"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "飞书", module_name = "nonebot.adapters.feishu" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "GitHub", module_name = "nonebot.adapters.github" }
]
plugins = []
plugin_dirs = []
builtin_plugins = ["single_session", "echo"]
